--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ package-lock.json
 
 # production
 /build
+/dist
 
 # misc
 /.vscode
@@ -22,3 +23,6 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Other
+/docs/NOTES.md
