--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokeshop-app",
+  "name": "poke-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.3",
     "classnames": "^2.3.1",
+    "localforage": "^1.9.0",
     "node-sass": "^5.0.0",
     "normalize-css": "^2.3.1",
     "react": "^17.0.2",
@@ -14,11 +15,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
+    "remixicon-react": "^1.0.0",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "update": "git pull && npm install",
     "start": "react-scripts start",
